test_bluesuit_console/blue_dir/include/TestFlash.h

typedef unsigned char  uint8;
typedef unsigned short uint16;
typedef unsigned long int uint32;
typedef signed long int int32;
TESTFLASH_API(int32) flInit(int32 port, int32 xtal, int32 delays, int32 transport);
TESTFLASH_API(int32) flInitSpiUnlock(int32 port, int32 xtal, int32 delays, int32 transport, const char* unlockKey);
TESTFLASH_API(int32) flmOpen(uint32 deviceMask, int32 xtal, int32 transport);
TESTFLASH_API(int32) flmOpenSpiUnlock(uint32 deviceMask, int32 xtal, int32 transport,
                                      const char* unlockKey);
TESTFLASH_API(int32) flInitTrans(char const * const trans, int32 xtal, int32 delays);
TESTFLASH_API(int32) flInitSpiUnlockTrans(char const * const trans, int32 xtal,
                                          int32 delays, const char* unlockKey);
TESTFLASH_API(int32) flmOpenTrans(uint32 deviceMask, char const * const trans, 
                                  int32 xtal);
TESTFLASH_API(int32) flmOpenSpiUnlockTrans(uint32 deviceMask,
                                           char const * const trans, int32 xtal,
                                           const char* unlockKey);
TESTFLASH_API(int32) flReadProgramFiles(char const * const filename);
TESTFLASH_API(int32) flmReadProgramFiles(char const * const filename);
TESTFLASH_API(int32) flProgramBlock(void);
TESTFLASH_API(int32) flmProgramBlock(uint32 deviceMask, uint8 eraseFirst, 
                                     uint8 verifyAfter, uint8 restartAfter);
TESTFLASH_API(int32) flErase(void);
TESTFLASH_API(int32) flmEraseBlock(uint32 deviceMask);
TESTFLASH_API(int32) flmEraseSpawn(uint32 deviceMask);
TESTFLASH_API(int32) flGangProgramBlock(uint16 deviceMask, uint8 eraseFirst, 
                                        uint8 restartAfter, uint8 skipUnused);
TESTFLASH_API(uint16) flGetDetectedDevices(void);
TESTFLASH_API(uint16) flGetBitErrorField(void);
TESTFLASH_API(uint32) flmGetBitErrorField(void);
TESTFLASH_API(int32) flProgramSpawn(void);
TESTFLASH_API(int32) flmProgramSpawn(uint32 deviceMask, uint8 eraseFirst, 
                                     uint8 verifyAfter, uint8 restartAfter);
TESTFLASH_API(int32) flGangProgramSpawn(uint16 deviceMask, uint8 eraseFirst, 
                                        uint8 restartAfter, uint8 skipUnused);
TESTFLASH_API(int32) flGetProgress(void);
TESTFLASH_API(int32) flmGetDeviceProgress(uint32 device);
TESTFLASH_API(int32) flGetLastError(void);
TESTFLASH_API(int32) flmGetLastError(void);
TESTFLASH_API(int32) flmGetDeviceError(uint32 device);
TESTFLASH_API(int32) flResetAndStart(void);
TESTFLASH_API(int32) flmResetAndStart(uint32 deviceMask);
TESTFLASH_API(void) flClose(void);
TESTFLASH_API(void) flmClose(uint32 deviceMask);
TESTFLASH_API(int32) flGetVersion(char* versionStr);
TESTFLASH_API(int32) flmGetVersion(char* versionStr);
TESTFLASH_API(int32) flStopProcessor(void);
TESTFLASH_API(int32) flmStopProcessor(uint32 deviceMask);
TESTFLASH_API(uint32) flGetDownloadTime(void);
TESTFLASH_API(uint32) flmGetDeviceDownloadTime(uint32 device);
TESTFLASH_API(int32) flGetAvailableSpiPorts(uint16* maxLen, char* ports, char* trans, 
                                            uint16* count);
TESTFLASH_API(int32) flmGetAvailableSpiPorts(uint16* maxLen, char* ports, char* trans, 
                                             uint16* count);
TESTFLASH_API(int32) flmConvertSpiPort(const char* transIn, char* transOut, 
                                       uint32* device);
TESTFLASH_API(int32) flGetFirmwareIds(uint8 source, uint32* loaderId,
                                        char* loaderName, uint32* stackId,  
                                        char* stackName, uint16 maxNameLen);
TESTFLASH_API(int32) flmGetDeviceFirmwareIds(uint32 device,
                                             uint32* loaderId, char* loaderName,
                                             uint32* stackId, char* stackName,
                                             uint16 maxNameLen);
TESTFLASH_API(int32) flmGetFileFirmwareIds(uint32* loaderId, char* loaderName,
                                           uint32* stackId, char* stackName,
                                           uint16 maxNameLen);
TESTFLASH_API(int32) flVerify(void);
TESTFLASH_API(int32) flmVerifyBlock(uint32 deviceMask, uint8 restartAfter);
TESTFLASH_API(int32) flmVerifySpawn(uint32 deviceMask, uint8 restartAfter);
TESTFLASH_API(int32) flGetFlashInfo(uint16* sectors, uint16* sizeMbits, 
                                    uint32* manId, uint32* devId);
TESTFLASH_API(int32) flmGetDeviceFlashInfo(uint32 device, uint16* sectors, 
                                           uint16* sizeMbits, uint32* manId, 
                                           uint32* devId);
TESTFLASH_API(int32) flSetFlashType(uint8 type);
TESTFLASH_API(int32) flmSetFlashType(uint32 deviceMask, uint8 type);
#define init_flash               flInit
#define read_program_files       flReadProgramFiles
#define program_flash_block      flProgramBlock
#define erase_flash              flErase
#define gang_program_flash_block flGangProgramBlock
#define get_bit_error_field      flGetBitErrorField
#define program_flash_spawn      flProgramSpawn
#define gang_program_flash_spawn flGangProgramSpawn
#define get_spawned_progress     flGetProgress
#define get_spawned_error        flGetLastError
#define reset_and_start          flResetAndStart
#define close_flash              flClose
#define get_version              flGetVersion